added env variable setup